# awspfx

./: .gitignore  LICENSE  README.md  awspfx.sh  compile_pex.sh  main.py  pyproject.toml  requirements.txt  setup_venv.sh
awspfx/: awspfx.py
examples/: aws_config  aws_credentials  aws_envrc
src/awspfx/: awspfx.py
