[tool.poetry]
name = "awspfx"
version = "0.1.0"
description = ""
authors = ["Mario Pardo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7 || ^3.8"
boto3 = "^1.14.50"
iterfzf = "^0.5.0"
colorlog = "^4.2.1"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
