[tool.poetry]
name = "awspfx"
version = "0.1.6"
description = ""
authors = [
    "Mario Pardo"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9 || ^3.10"
boto3 = "^1.14.50"
iterfzf = "^0.5.0"
colorlog = "^6.6.0"
docopt-ng = "^0.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
